@@ -10,6 +10,8 @@
 
 
 Version 4.2.3
+ - Update: is_dead() calculations now take account of non-gregorian dates
+ - Fixed: [ 1941711 ] Age at which to assume a person is dead Off By 1 Year (fisharebest)
  - Fixed: [ 2033046 ] Misleading text for changes_present (fisharebest)
  - Fixed: [ 1782849 ] Minimal Theme - No text shown - Research Assistant top menu (fisharebest)
  - Fixed: [ 1390658 ] Ever Increasing URLs (e.g. login link) (fisharebest)
